--- a/column-preview-card/Riya Jaiswal/index.html
+++ b/column-preview-card/Riya Jaiswal/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Preview</title>
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+    <main>
     <div class="car">
 
         <div id="sedans">
@@ -48,7 +50,7 @@
 
     </div>
 
-
+</main>
 </body>
 
 </html>
